--- a/invention.html
+++ b/invention.html
@@ -68,9 +68,18 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h1 class="w3-jumbo"><span class="w3-hide-small"> Inventions </h1>
     <h2>Nikola Tesla</h2>
     
-<p>
-  Content Here !!!!!
-</p>
+<br>
+<br>
+<br>
+
+<style>
+p.serif{font-family: "Courier New";font-size: 30px;text-align: left;}
+p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
+</style>
+<p class="serif">1. Motor Listrik</p>
+<p class="sansserif">Tesla merupakan orang pertama yang menemukan peralatan mesin tanpa menggunakan minyak bumi. Pemikiran Tesla ini bermula dari keresahannya ketergantungan manusia terhadap minyak bumi, hingga dirinya kemudian menemukan cara dengan memusatkan kekuatan berputar pada medan magnet.Penemuan Tesla ini memang harus menyerah pada krisis ekonomi yang melanda dunia pada tahun 1930, juga karena perang dunia. Namun temuan Tesla tersebut merupakan cikal bakal dari penemuan-penemuan besar lainnya terkait motor listrik. General Motor, sebuah perusahaan mobil, adalah perusaan yang telah memopulerkan penemuan Tesla dalam bidang motor listrik. Berkat penemuan Tesla tersebut, kini kita bisa menikmati alat-alat listrik, peralatan mesin, dan jam tangan listrik.</p>
+
+
   
   
     <!-- Footer -->
