--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
   <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large/public/theme-images/slide-nikola-tesla.jpg?itok=sSbyjFw4" style="width:100%">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
-  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/biography.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>BIOGRAPHY</p>
   </a>
-  <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-book w3-xxlarge"></i>
     <p>BOOKS</p>
   </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-trophy w3-xxlarge"></i>
     <p>AWARDS</p>
   </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href=https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/invention.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>INVENTIONS</p>
   </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/contact.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
     <p>CONTACT</p>
   </a>
