--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-trophy w3-xxlarge"></i>
     <p>AWARDS</p>
   </a>
-  <a href=https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/invention.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/invention.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>INVENTIONS</p>
   </a>
