--- a/book.html
+++ b/book.html
@@ -65,12 +65,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small"> Books </h1>
+    <h1 class="w3-jumbo"> Books </h1>
     <h2>Nikola Tesla</h2>
     
 <p>
-  Content Here !!!!!
+  <a href="default.asp">
+  <img src="lecture-academy-science-lenard-and-roentgen-01.jpg" alt="HTML tutorial" style="width:300px;height:400px;border:0">
+  <p><b>Nikola Tesla: Lecture Before the New York Academy of Sciences April 6, 1897: The Streams of Lenard and Roentgen and Novel Apparatus for Their Production</b></p>
+</a>
 </p>
+</header>
   
   
     <!-- Footer -->
