--- a/award.html
+++ b/award.html
@@ -74,6 +74,33 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/nikola_tesla_portrait_0028.jpg?itok=9NuwpNYo"  width="500" height="333">
 
  <p>Nikola Tesla, at left, receiving the Order of the White Lion from Vladimir Hurban, Minister from Czechoslovakia, at a luncheon held July, 11, 1937 in Tesla's room at the New Yorker Hotel.</p>
+ <h2><b>Elliot Cresson Medal</b></h2>
+
+  <p>The Elliott Cresson Medal, also known as the Elliott Cresson Gold Medal, was the highest award given by the Franklin Institute and tesla won this award on 1894 on Engineering category Alternating Electric Currents of High Frequency citation</p>
+  <img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjVl_ip3JfhAhUItI8KHa0wB8QQjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FElliott_Cresson_Medal&psig=AOvVaw2zqhzH_xkVz-tzQUI4JLGn&ust=1553411873909620" width="500" height="333">
+
+  <h2><b>John Scott Medal</b></h2>
+  <p>John Scott Award, created in 1816 as the John Scott Legacy Medal and Premium, is presented to men and women whose inventions improved the "comfort, welfare, and happiness of human kind" in a significant way and tesla won this medal on 1934 for
+Polyphase system of generating, transmitting, distributing and utilizing electricity
+</p>
+
+  <h2><b>IEEE Edison Medal
+</b></h2>
+  <p>The IEEE Edison Medal is presented by the Institute of Electrical and Electronics Engineers (IEEE) "for a career of meritorious achievement in electrical science and tesla won this medal on 1916
+</p>
+
+  <h2><b>Doctorate,Univ.of poitiers
+</b></h2>
+  <p>on january 25th 1937 Tesla got the certificate of honorary doctorate from the universities of poitiers</p>
+
+  <h2><b>Certificate of permanent membership of the Serbian Royal Academy awarded to Tesla</b></h2>
+  <p>on 7 th march 1937 Tesla was the first scientist nominated for permanetnt membership of the serbian royal academy of sciences but wasnt initially elected.
+</p>
+
+  <h2><b>Certificate of honorary doctorate from the University of Zagreb
+</b></h2>
+  <p>On June 15th 1926 Tesla received a diploma of honorary doctorate from the faculcity of engeering university of belgrade
+</p>
 
 </p>
   
@@ -81,6 +108,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://tesyamarsella.github.io/">Tesya Marsella</a></button></p>
+    <p><button class="w3-button w3-black w3-round-large"><a href="https://kireieasya.github.io/">Kirei Easya</a></button></p>
  
     
     
