--- a/biography.html
+++ b/biography.html
@@ -76,6 +76,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://sherlitaf.github.io/">Sherlita Fadhila</a></button></p>
+    <p><button class="w3-button w3-black w3-round-large"><a href="https://aufadilrahma.github.io/">Aufadil Rahmadi Putra</a></button></p>
+
  
     
     
