--- a/invention.html
+++ b/invention.html
@@ -52,12 +52,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
 <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">BIOGRAPHY</a>
-    <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">BOOKS</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">AWARDS</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">INVENTIONS</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
+    <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
+    <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/biography.html" class="w3-bar-item w3-button" style="width:25% !important">BIOGRAPHY</a>
+    <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book.html" class="w3-bar-item w3-button" style="width:25% !important">BOOKS</a>
+    <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award.html" class="w3-bar-item w3-button" style="width:25% !important">AWARDS</a>
+    <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/invention.html" class="w3-bar-item w3-button" style="width:25% !important">INVENTIONS</a>
+    <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/contact.html" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
 </div>
 
