--- a/award.html
+++ b/award.html
@@ -77,7 +77,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <h2><b>Elliot Cresson Medal</b></h2>
 
   <p>The Elliott Cresson Medal, also known as the Elliott Cresson Gold Medal, was the highest award given by the Franklin Institute and tesla won this award on 1894 on Engineering category Alternating Electric Currents of High Frequency citation</p>
-  <img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjVl_ip3JfhAhUItI8KHa0wB8QQjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FElliott_Cresson_Medal&psig=AOvVaw2zqhzH_xkVz-tzQUI4JLGn&ust=1553411873909620" width="500" height="333">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Elliott_Cresson_Medal%2C_Berliner%2C_1913.jpg/220px-Elliott_Cresson_Medal%2C_Berliner%2C_1913.jpg" width="500" height="333">
 
   <h2><b>John Scott Medal</b></h2>
   <p>John Scott Award, created in 1816 as the John Scott Legacy Medal and Premium, is presented to men and women whose inventions improved the "comfort, welfare, and happiness of human kind" in a significant way and tesla won this medal on 1934 for
