--- a/award.html
+++ b/award.html
@@ -80,6 +80,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Elliott_Cresson_Medal%2C_Berliner%2C_1913.jpg/220px-Elliott_Cresson_Medal%2C_Berliner%2C_1913.jpg" width="500" height="333">
 
   <h2><b>John Scott Medal</b></h2>
+      <img src="https://www.teslasociety.com/pictures/johnscott.jpg" width="500">
   <p>John Scott Award, created in 1816 as the John Scott Legacy Medal and Premium, is presented to men and women whose inventions improved the "comfort, welfare, and happiness of human kind" in a significant way and tesla won this medal on 1934 for
 Polyphase system of generating, transmitting, distributing and utilizing electricity
 </p>
