--- a/invention.html
+++ b/invention.html
@@ -76,8 +76,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 p.serif{font-family: "Courier New";font-size: 30px;text-align: left;}
 p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
 </style>
-<p class="serif">1. Motor Listrik</p>
+<p class="serif"><b>1. Motor Listrik</b></p>
 <p class="sansserif">Tesla merupakan orang pertama yang menemukan peralatan mesin tanpa menggunakan minyak bumi. Pemikiran Tesla ini bermula dari keresahannya ketergantungan manusia terhadap minyak bumi, hingga dirinya kemudian menemukan cara dengan memusatkan kekuatan berputar pada medan magnet.Penemuan Tesla ini memang harus menyerah pada krisis ekonomi yang melanda dunia pada tahun 1930, juga karena perang dunia. Namun temuan Tesla tersebut merupakan cikal bakal dari penemuan-penemuan besar lainnya terkait motor listrik. General Motor, sebuah perusahaan mobil, adalah perusaan yang telah memopulerkan penemuan Tesla dalam bidang motor listrik. Berkat penemuan Tesla tersebut, kini kita bisa menikmati alat-alat listrik, peralatan mesin, dan jam tangan listrik.</p>
+<br>
+<br>
+<p class="serif"><b>2. Radio</b></p>
+<p class="sansserif">Mungkin orang-orang menganggap kalau perangkat radio ditemukan oleh Guglielmo Marconi dan mendapatkan hak paten pada tahun 1904. Akan tetapi sembilan tahun sebelum itu, tepatnya pada 1895, Tesla berhasil mengirimkan sinyal radio dengan jangkauan mencapai 50 mil. Penemuannya ini dia selesaikan pada tahun 1897.
+Pemberian hak paten terhadap siapa yang menemukan radio memang pernah menjadi kontroversi. Meskipun penemuan Tesla lebih dulu diterima pihak paten AS, namun kantor paten AS menyatakan kalau radio merupakan penemuan Marconi. Hal tersebut berlangsung selama 39 tahun kemudian, sebelum pemerinta USA menyatakan bahwa Nikola Tesla merupakan orang yang pertama kali menemukan radio, yakni pada 1943, empat bulan setelah Tesla wafat.</p>
+<br>
+<br>
+<p class="serif"><b>3. Transfer Energi Nirkabel Jarak Jauh</b></p>
+<p class="sansserif">Isi kepala Nikola Tesla tampak tak pernah ada habisnya. Setelah dia menyelsaikan suatu eksperimen, dia menulis sebuah artikel di Century Magazine, dan apa yang dipaparkan Tesla pada saat itu dianggap sesuatu yang amat sangat gila. Bagaimana tidak, pada saat itu dia berpikir mengenai kemungkinan menangkap energi dari sinar matahari, berkomunikasi secara global, listrik wireless, dan lain-lain yang dilakukan melalui transmisi tower.Untuk mengembangkan transmisi energi dan energi tersebut dapat dipancarkan dari jarak yang sangat jauh, Tesla membangun sebuah Menara Wardenclyffe, di Shoreham, Long Island. Tower tersebut berfungsi sebagai sarana telekomunikasi nirkabel dan pengiriman daya listrik. Dan ternyata, ide gila Tesla saat itu benar-benar terjadi, dan saat ini pun manusia di seluruh dunia menikmati hasil dari pemikiran gila Tesla yang terlalu maju.</p>
+<br>
+<br>
+<p class="serif"><b>4. Teleautomaton (Remot Control)</b></p>
+<p class="sansserif">Pada 1898, Tesla mendemonstrasikan sebuah temuannya di hadapan orang-orang di Madison Square Garden. Pada demonstrasinya tersebut ia menampilkan sebuah perahu yang berada di aquarium besar bergerak-gerak. Pada saat itu Tesla mengatakan kalau perahu itu dia gerakkan melalui pikirannya, membuat orang-orang takjub akan apa yang dilakukannya. Padahal, perahu tersebut dia gerakkan melalui sinyal radio dengan menggunakan remot kontrol dari kayu.</p>
+<br>
+<br>
+
+
+
+  <div></div>
 
 
   
