--- a/book.html
+++ b/book.html
@@ -69,7 +69,53 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>Nikola Tesla</h2>
     
 <p>
-  Content Here !!!!!
+  <!-- First Photo Grid-->
+  <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+    <div class="w3-quarter">
+      <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/nikola-tesla-returns-from-heaven-to-earth-01.jpg?raw=true" alt="Nikola Tesla Book 1" style="width:100%">
+      <h3>NIKOLA TESLA RETURNS: FROM HEAVEN TO EARTH</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book1.html">Know More...</a></button></p>
+    </div>
+    <div class="w3-quarter">
+      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/electrical-wizard-how-nikola-tesla-lit-up-the-world-01.jpg" alt="Nikola Tesla Book 2" style="width:100%">
+      <h3>ELECTRICAL WIZARD: CANDLEWICK BIOGRAPHIES: HOW NIKOLA TESLA LIT UP THE WORLD</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book2.html">Know More...</a></button></p>
+    </div>
+    <div class="w3-quarter">
+      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/lost-journals-of-nikola-tesla-01.jpg" alt="Nikola Tesla Book 3" style="width:100%">
+      <h3>THE LOST JOURNALS OF NIKOLA TESLA: HAARP - CHEMTRAILS AND THE SECRET OF ALTERNATIVE 4</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book3.html">Know More...</a></button></p>
+    </div>
+    <div class="w3-quarter">
+      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/electricity-at-high-pressure-01.jpg" alt="Nikola Tesla Book 4" style="width:100%">
+      <h3>ELECTRICITY AT HIGH PRESSURES AND FREQUENCIES</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book4.html">Know More...</a></button></p>
+    </div>
+  </div>
+  
+  <!-- Second Photo Grid-->
+  <div class="w3-row-padding w3-padding-16 w3-center">
+    <div class="w3-quarter">
+      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/the-tesla-high-frequency-coil-01.jpg" alt="Nikola Tesla Book 5" style="width:100%">
+      <h3>THE TESLA HIGH FREQUENCY COIL: ITS CONSTRUCTION AND USES</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book5.html">Know More...</a></button></p>
+    </div>
+    <div class="w3-quarter">
+      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/the-tesla-factor-01.jpg" alt="Nikola Tesla Book 6" style="width:100%">
+      <h3>THE TESLA FACTOR</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book6.html">Know More...</a></button></p>
+    </div>
+    <div class="w3-quarter">
+      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/legacy-the-life-of-nikola-tesla-01.jpg" alt="Nikola Tesla Book 7" style="width:100%">
+      <h3>LEGACY: THE LIFE OF NIKOLA TESLA</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book7.html">Know More...</a></button></p>
+    </div>
+    <div class="w3-quarter">
+      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/tesla-coil-01.jpg" alt="Nikola Tesla Book 8" style="width:100%">
+      <h3>TESLA COIL</h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book8.html">Know More...</a></button></p>
+    </div>
+  </div>
 </p>
   
   
