--- a/award.html
+++ b/award.html
@@ -87,6 +87,7 @@ Polyphase system of generating, transmitting, distributing and utilizing electri
 
   <h2><b>IEEE Edison Medal
 </b></h2>
+      <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_small/public/article-pdf-preview/19170526-01.jpg?itok=Px3mP92u" width="500">
   <p>The IEEE Edison Medal is presented by the Institute of Electrical and Electronics Engineers (IEEE) "for a career of meritorious achievement in electrical science and tesla won this medal on 1916
 </p>
 
