--- a/biography.html
+++ b/biography.html
@@ -65,12 +65,48 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small"> Biography </h1>
-    <h2>Nikola Tesla</h2>
-    
+
+<h1 class="w3-jumbo"><span class="w3-hide-small"> Biography </h1>
+
+<h2>Nikola Tesla</h2>
+
 <p>
-  Content Here !!!!!
+
+Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi listrik yang lahir di Smiljan,Kekaisaran Austria (sekarang Kroasia) 10 Juli 1856. Ia merupakan anak keempat dari lima bersaudara. Ayahnya bernama Milutin Tesla merupakan seorang Pendeta Ortodoks dan Ibunya, Duka Tesla yang memiliki bakat untuk membuat kerajinan alat rumah, peralatan mekanik dan kemampuan untuk menghafal puisi epik Serbia. Lahir dan dibesarkan di Kekaisaran Austria, Tesla menyelesaikan pendidikannya dalam bidang teknik dan fisika tahun 1870-an. Ia sempat bekerja dalam bidang telefoni pada 1880-an dan di Continental Edison dalam bidang indudstri tenaga listrik. Ia pindah ke Amerika Serikat pada 1884 dan nantinya ia dinaturalisasi menjadi warga negara. Nikola Tesla sempat bekerja di Edison Mechine Works di New York City sebelum memutuskan keluar. Dengan bantuan partner untuk pembiayaan dan pemasaran ide-idenya, Tesla mendirikan laboratorium di New York untuk mengembangkan berbagai peralatan listrik dan mekanik. Motor induksi arus bolak-baliknya dan paten polifasa bolak-baliknya dilisensi oleh Westinghouse Electric pada tahun1888
+
 </p>
+
+ <div class="w3-padding-64 w3-content" id="photos">
+
+    <h2 class="w3-text-light-grey">My Photos</h2>
+
+    <hr style="width:200px" class="w3-opacity">
+
+    <!-- Grid for photos -->
+
+    <div class="w3-row-padding" style="margin:0 -16px">
+
+      <div class="w3-half">
+
+        <img src="/w3images/wedding.jpg" style="width:100%">
+
+        <img src="/w3images/rocks.jpg" style="width:100%">
+
+        <img src="/w3images/sailboat.jpg" style="width:100%">
+
+      </div>
+
+      <div class="w3-half">
+
+        <img src="/w3images/underwater.jpg" style="width:100%">
+
+        <img src="/w3images/chef.jpg" style="width:100%">
+
+        <img src="/w3images/wedding.jpg" style="width:100%">
+
+        <img src="/w3images/p6.jpg" style="width:100%">
+
+      </div>
   
   
     <!-- Footer -->
