--- a/invention.html
+++ b/invention.html
@@ -23,27 +23,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
   <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large/public/theme-images/slide-nikola-tesla.jpg?itok=sSbyjFw4" style="width:100%">
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/biography.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>BIOGRAPHY</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-book w3-xxlarge"></i>
     <p>BOOKS</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-trophy w3-xxlarge"></i>
     <p>AWARDS</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/invention.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>INVENTIONS</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/contact.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
     <p>CONTACT</p>
   </a>
@@ -77,22 +77,30 @@ p.serif{font-family: "Courier New";font-size: 30px;text-align: left;}
 p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
 </style>
 <p class="serif"><b>1. Motor Listrik</b></p>
+<img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Motor-Listrik%20(1).jpg?raw=true" width="500">
 <p class="sansserif">Tesla merupakan orang pertama yang menemukan peralatan mesin tanpa menggunakan minyak bumi. Pemikiran Tesla ini bermula dari keresahannya ketergantungan manusia terhadap minyak bumi, hingga dirinya kemudian menemukan cara dengan memusatkan kekuatan berputar pada medan magnet.Penemuan Tesla ini memang harus menyerah pada krisis ekonomi yang melanda dunia pada tahun 1930, juga karena perang dunia. Namun temuan Tesla tersebut merupakan cikal bakal dari penemuan-penemuan besar lainnya terkait motor listrik. General Motor, sebuah perusahaan mobil, adalah perusaan yang telah memopulerkan penemuan Tesla dalam bidang motor listrik. Berkat penemuan Tesla tersebut, kini kita bisa menikmati alat-alat listrik, peralatan mesin, dan jam tangan listrik.</p>
 <br>
 <br>
 <p class="serif"><b>2. Radio</b></p>
+<img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Radio-Tesla.jpg?raw=true"width="500">
 <p class="sansserif">Mungkin orang-orang menganggap kalau perangkat radio ditemukan oleh Guglielmo Marconi dan mendapatkan hak paten pada tahun 1904. Akan tetapi sembilan tahun sebelum itu, tepatnya pada 1895, Tesla berhasil mengirimkan sinyal radio dengan jangkauan mencapai 50 mil. Penemuannya ini dia selesaikan pada tahun 1897.
 Pemberian hak paten terhadap siapa yang menemukan radio memang pernah menjadi kontroversi. Meskipun penemuan Tesla lebih dulu diterima pihak paten AS, namun kantor paten AS menyatakan kalau radio merupakan penemuan Marconi. Hal tersebut berlangsung selama 39 tahun kemudian, sebelum pemerinta USA menyatakan bahwa Nikola Tesla merupakan orang yang pertama kali menemukan radio, yakni pada 1943, empat bulan setelah Tesla wafat.</p>
 <br>
 <br>
 <p class="serif"><b>3. Transfer Energi Nirkabel Jarak Jauh</b></p>
+<img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Tower-Tesla.jpeg?raw=true"width"500">
 <p class="sansserif">Isi kepala Nikola Tesla tampak tak pernah ada habisnya. Setelah dia menyelsaikan suatu eksperimen, dia menulis sebuah artikel di Century Magazine, dan apa yang dipaparkan Tesla pada saat itu dianggap sesuatu yang amat sangat gila. Bagaimana tidak, pada saat itu dia berpikir mengenai kemungkinan menangkap energi dari sinar matahari, berkomunikasi secara global, listrik wireless, dan lain-lain yang dilakukan melalui transmisi tower.Untuk mengembangkan transmisi energi dan energi tersebut dapat dipancarkan dari jarak yang sangat jauh, Tesla membangun sebuah Menara Wardenclyffe, di Shoreham, Long Island. Tower tersebut berfungsi sebagai sarana telekomunikasi nirkabel dan pengiriman daya listrik. Dan ternyata, ide gila Tesla saat itu benar-benar terjadi, dan saat ini pun manusia di seluruh dunia menikmati hasil dari pemikiran gila Tesla yang terlalu maju.</p>
 <br>
 <br>
 <p class="serif"><b>4. Teleautomaton (Remot Control)</b></p>
+<img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Remote-Control-Tesla.jpg?raw=true"width"500">
 <p class="sansserif">Pada 1898, Tesla mendemonstrasikan sebuah temuannya di hadapan orang-orang di Madison Square Garden. Pada demonstrasinya tersebut ia menampilkan sebuah perahu yang berada di aquarium besar bergerak-gerak. Pada saat itu Tesla mengatakan kalau perahu itu dia gerakkan melalui pikirannya, membuat orang-orang takjub akan apa yang dilakukannya. Padahal, perahu tersebut dia gerakkan melalui sinyal radio dengan menggunakan remot kontrol dari kayu.</p>
 <br>
 <br>
+<p class="serif"><b>5. Pesawat Tanpa Sayap</b></p>
+<img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/1357d6443577adc.jpg?raw=true"width"500">
+<p class="sansserif">Sewaktu Perang Dunia I pecah, Tesla membayangkan penerapan energi nirkabel dapat meningkatkan sistem kerja transportasi. Dia mengklaim kalau sebuah pesawat tak bersayap dan tanpa awak, atau Airship, dapat mengangkut penumpang dari New York ke London dalam waktu tiga jam dengan menggunakan energi listrik melalui transfer energi nirkabel.
+Tujuan pesawat tanpa sayap tersebut telah ditentukan sebelumnya. Lebih jauh lagi, Tesla bahkan mengatakan kalau Airship juga bisa digunakan dalam perang, terutama melalui serangan udara. Tentu saja banyak orang yang menganggap klaim Testa merupakan ide gila. Akan tetapi Tesla terus berusaha meyakinkan Departemen Pertahanan AS tentang alat yang mampu terbang tanpa sayap untuk mengirimkan bahan peledak ke musuh. Ide Tesla tersebut kini kita lihat dalam bentuk rudal.
 
 
 
