--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"> The Team </h1>
-    
+  <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Teams_illustrations_Full+Res-01.png?raw=true"width="950">
 <!-- Team Section -->
 <div class="w3-container" style="padding:128px 16px" id="team">
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
