--- a/award.html
+++ b/award.html
@@ -92,8 +92,10 @@ Polyphase system of generating, transmitting, distributing and utilizing electri
 </p>
 
   <h2><b>Doctorate,Univ.of poitiers
+
 </b></h2>
   <p>on january 25th 1937 Tesla got the certificate of honorary doctorate from the universities of poitiers</p>
+   <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0014.jpg?itok=SE2W0Hsz" width="500">
 
   <h2><b>Certificate of permanent membership of the Serbian Royal Academy awarded to Tesla</b></h2>
   <p>on 7 th march 1937 Tesla was the first scientist nominated for permanetnt membership of the serbian royal academy of sciences but wasnt initially elected.
