--- a/book2.html
+++ b/book2.html
@@ -78,6 +78,7 @@ When a Serbian boy named Nikola Tesla was three, he stroked his cat and was ench
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
+    <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
     
     
