--- a/book6.html
+++ b/book6.html
@@ -105,6 +105,7 @@ The Tesla Factor blends international intrigue, suspense, and danger that will k
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
+    <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
     
     
