--- a/biography.html
+++ b/biography.html
@@ -69,6 +69,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <h1 class="w3-jumbo"><span class="w3-hide-small"> Biography </h1>
 
 <h2>Nikola Tesla</h2>
+<img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/Nik.jpg"width="800">
 <br>
 <br>
 
@@ -80,7 +81,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
  <div class="w3-padding-64 w3-content" id="photos">
 
-    <h2 class="w3-text-light-grey">My Photos</h2>
+    <h2 class="w3-text-light-grey">Gallery</h2>
 
     <hr style="width:200px" class="w3-opacity">
 
