--- a/book8.html
+++ b/book8.html
@@ -74,14 +74,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <p>Invented by Nikola Tesla back in 1891, the Tesla coil can boost power from a wall socket or battery to millions of high frequency volts. In this booklet, the only systematic treatment of the Tesla coil for the electrical nonexpert, you'll find a wealth of information on one of the best-kept secrets of electric technology, plus all the facts you need to build a Tesla coil on any scale. And you can build one out of everyday stuff.
 
 The coil shown features a beer-bottle capacitor. A well-tuned coil's output is harmless but can perform amazing tasks. Light your home, farm, or ranch at a fraction of the usual cost. Disinfect water. Build a powerful radio transmitter. Learn about the souped-up Tesla coil called the magnifying transmitter and how Tesla envisioned its use for wireless electric power and global communications.</p>
-<table>
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+</style>
+</head>
+<body>
+
+<h2>Collapsed Borders</h2>
+
+<table style="width:80%">
   <tr>
     <td>Category</td>
     <td>Technical</td>
-  </tr>
-  <tr>
-    <td>Date published</td>
-    <td>June, 1989</td>
   </tr>
   <tr>
     <td>Publisher</td>
@@ -91,16 +97,16 @@ The coil shown features a beer-bottle capacitor. A well-tuned coil's output is h
     <td>Dimensions</td>
     <td>8.5 x 7 x 0.1 inches</td>
   </tr>
-    <tr>
+  <tr>
     <td>Page count</td>
     <td>28</td>
   </tr>
-    </tr>
     <tr>
     <td>Edition</td>
     <td>First</td>
   </tr>
 </table>
+
   
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
