--- a/book8.html
+++ b/book8.html
@@ -46,7 +46,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/contact.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
     <p>CONTACT</p>
-  </a>
+  </a>https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/
 </nav>
 
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
@@ -74,6 +74,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <p>Invented by Nikola Tesla back in 1891, the Tesla coil can boost power from a wall socket or battery to millions of high frequency volts. In this booklet, the only systematic treatment of the Tesla coil for the electrical nonexpert, you'll find a wealth of information on one of the best-kept secrets of electric technology, plus all the facts you need to build a Tesla coil on any scale. And you can build one out of everyday stuff.
 
 The coil shown features a beer-bottle capacitor. A well-tuned coil's output is harmless but can perform amazing tasks. Light your home, farm, or ranch at a fraction of the usual cost. Disinfect water. Build a powerful radio transmitter. Learn about the souped-up Tesla coil called the magnifying transmitter and how Tesla envisioned its use for wireless electric power and global communications.</p>
+<style>
 table, th, td {
   border: 1px solid white;
   border-collapse: collapse;
