--- a/biography.html
+++ b/biography.html
@@ -91,17 +91,17 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
       <div class="w3-half">
 
-        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/TeslaII.png" style="width:100%">
 
-        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/lampu.png" style="width:100%">
 
-        <img src="/w3images/sailboat.jpg" style="width:100%">
+        <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/listrik.png" style="width:100%">
 
       </div>
 
       <div class="w3-half">
 
-        <img src="/w3images/underwater.jpg" style="width:100%">
+        <img src="" style="width:100%">
 
         <img src="/w3images/chef.jpg" style="width:100%">
 
