--- a/book7.html
+++ b/book7.html
@@ -76,14 +76,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 The discoverer of alternating current, the father of RADAR, robotics and wireless transmission. Our world owes him much for his visions, his struggles, and his quest to make the world a better place for mankind.
 
 Chapters Include: The Early Years, Dane's Death, A Move to Gospic, Nikola Is Very Sick, Working, Tesla and Westinghouse, Disaster Strikes, Worldwide Recognition, The Johnsons' House Party, Wardenclyffe Broadcasting, Controversial Issues and Tesla's Financial Crisis.</p>
-<table>
+<style>
+table, th, td {
+  border: 1px solidwhite;
+  border-collapse: collapse;
+}
+</style>
+</head>
+<body>
+
+<table style="width:80%">
   <tr>
     <td>Category</td>
     <td>History</td>
-  </tr>
-  <tr>
-    <td>Date published</td>
-    <td>March 10th, 2008</td>
   </tr>
   <tr>
     <td>Publisher</td>
@@ -93,16 +98,20 @@ Chapters Include: The Early Years, Dane's Death, A Move to Gospic, Nikola Is Ver
     <td>Dimensions</td>
     <td>9.0 x 7 x 0.2 inches</td>
   </tr>
-    <tr>
+  <tr>
     <td>Page count</td>
     <td>86</td>
   </tr>
-    </tr>
     <tr>
     <td>Edition</td>
     <td>First</td>
   </tr>
+  <tr>
+    <td>Date published</td>
+    <td>March 10th, 2008</td>
+  </tr>
 </table>
+
   
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
