--- a/award.html
+++ b/award.html
@@ -100,11 +100,13 @@ Polyphase system of generating, transmitting, distributing and utilizing electri
   <h2><b>Certificate of permanent membership of the Serbian Royal Academy awarded to Tesla</b></h2>
   <p>on 7 th march 1937 Tesla was the first scientist nominated for permanetnt membership of the serbian royal academy of sciences but wasnt initially elected.
 </p>
+   <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0012.jpg?itok=vCLFruAT" width="500">
 
   <h2><b>Certificate of honorary doctorate from the University of Zagreb
 </b></h2>
   <p>On June 15th 1926 Tesla received a diploma of honorary doctorate from the faculcity of engeering university of belgrade
 </p>
+   <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0013.jpg?itok=4HexLQTN" width="500">
 
 </p>
   
