--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Adam Rafif Faqih</h3>
           <p class="w3-opacity">Leader</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Hola!Saya bertanggung jawab atas seluruh kinerja anggota dan website.</p>
           <p><a href="https://adamrafif.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -87,7 +87,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Alexandra</h3>
           <p class="w3-opacity">Co-Leader</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Nihao!Saya bertanggung jawab atas halaman Inventions.</p>
           <p><a href="https://alexandra63.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -98,7 +98,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Deska Yulianti</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Halo!Saya bertanggung jawab atas halaman Books.</p>
           <p><a href="https://deskayyy.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -109,7 +109,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Aufadil Rahmadi</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Bonjour!Saya bertanggung jawab atas halaman Biography</p>
           <p><a href="https://aufadilrahma.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -125,7 +125,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Hilal Ahmad</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Konnichiwa!Saya bertanggung jawab atas halaman inventions</p>
           <p><a href="https://hilalahmad.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -136,7 +136,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Kirei Easya</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Annyeong!Saya bertanggung jawab atas halaman Awards.</p>
           <p><a href="https://kireieasya.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -147,7 +147,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Tesya Marsella</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Ciao!Saya bertanggung jawab atas halaman Awards</p>
           <p><a href="https://tesyamarsella.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -158,7 +158,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Sherlita</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Ohayo!Saya bertanggung jawab atas halaman Biography.</p>
           <p><a href="https://sherlitaf.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
