--- a/book7.html
+++ b/book7.html
@@ -77,7 +77,7 @@ The discoverer of alternating current, the father of RADAR, robotics and wireles
 
 Chapters Include: The Early Years, Dane's Death, A Move to Gospic, Nikola Is Very Sick, Working, Tesla and Westinghouse, Disaster Strikes, Worldwide Recognition, The Johnsons' House Party, Wardenclyffe Broadcasting, Controversial Issues and Tesla's Financial Crisis.</p>
 <style>
-table, th, td {
+table, td {
   border: 1px solidwhite;
   border-collapse: collapse;
 }
