--- a/index.html
+++ b/index.html
@@ -60,15 +60,50 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/contact.html" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
 </div>
-
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="https://teslauniverse.com/sites/default/files/styles/default_extra_large/public/theme-images/slide-nikola-tesla.jpg?itok=sSbyjFw4" alt="tesla" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Nikola</b></span> <span class="w3-hide-small w3-text-light-grey">Tesla</span></h1>
+  </div>
+</header>
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
-  <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small"> Nikola </span> Tesla </h1>
-    <h2> American Inventor </h2>
-    <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large/public/theme-images/slide-nikola-tesla.jpg?itok=sSbyjFw4" alt="boy" class="w3-image" width="992" height="1108">
-  </header>
+  <!-- Project Section -->
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">News</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/home1.html"><div class="w3-display-topleft w3-black w3-padding">NIKOLA TESLA AND HIS WORK</div></a>
+        <img src="https://teslauniverse.com/sites/default/files/styles/default_small/public/article-pdf-preview/18940900-01.jpg?itok=lSPAlYfl" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/home2.html"><div class="w3-display-topleft w3-black w3-padding">12-MILLION VOLTS
+</div></a>
+        <img src="https://teslauniverse.com/sites/default/files/styles/default_small/public/article-pdf-preview/19760600-01.jpg?itok=Bx5Oc3M3" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/home3.html"><div class="w3-display-topleft w3-black w3-padding">BREAKING UP TORNADOES
+</div></a>
+        <img src="https://teslauniverse.com/sites/default/files/styles/default_small/public/article-pdf-preview/19331200-01.jpg?itok=_c3GwoVz" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/home4.html"><div class="w3-display-topleft w3-black w3-padding">CAN RADIO IGNITE BALLOONS?</div></a>
+        <img src="https://teslauniverse.com/sites/default/files/styles/default_small/public/article-pdf-preview/19191000-01.jpg?itok=zySDSKkq" alt="House" style="width:100%">
+      </div>
+    </div>
+  </div>
+
+  
 
   
   
