--- a/award.html
+++ b/award.html
@@ -107,7 +107,22 @@ Polyphase system of generating, transmitting, distributing and utilizing electri
   <p>On June 15th 1926 Tesla received a diploma of honorary doctorate from the faculcity of engeering university of belgrade
 </p>
    <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0013.jpg?itok=4HexLQTN" width="500">
+  
+  <h2><b>Certificate of Dr. Honoris Causa awarded to Tesla from the University of Paris</b></h2>
+<p>on 6th November 1937 the unuversity of paris awarded Nikola Tesla the Dr.Honoris Causa of technical science</p>
+<h2><b>Awarded to Tesla, the White Lion is the highest order of the Czech Republic</b></h2>
+</p>
+<p>on July 11th 1937 Mr Hurban presenting the grand cordon of the white lion said "our czechoslovak nations brotherly feeling towards you as a son of yugoslavia made it a duty,not a privilege to give you the decoration in the name of the president of our nation.Dr Eduard Benes "he also presented a diploma certifying Dr Tesla's honorary degree as a doctor of the university of prague.</p>
+  <h2><b>Certificate of honorary doctorate awarded to Tesla from the University of Belgrade</b></h2>
+  <p>on june 15 th 1926 Tesla received a diploma of honorary doctorate from the faculty of engineering university of balgrade.</p>
 
+  <h2><b>Thomas Edison and the Edison medalists, including Nikola Tesla
+</b></h2>
+<p>on May 18 th 1917, originally rejecting the offer of the AIEE's highest award, Tesla reconsider and accepts after being encouraged by Bernard A. Behrend. during the introduction, Tesla dissappears and is later found at the library feeding his beloved pigeons. He is persuaded to return and gives his acceptance speech.</p>
+
+  <h2><b>Tesla's certificate of membership for the New York Academy of Sciences</b>
+</h2>
+  <p>May 27th 1907, It had been just offer 10 years since Tesla lectured on x-rays before the newyork academy of science when ther elected him as an active member.</p>
 </p>
   
   
