--- a/biography.html
+++ b/biography.html
@@ -91,7 +91,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
       <div class="w3-half">
 
-        <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/TeslaII.png" style="width:100%">
+        <img src="https://www.incimages.com/uploaded_files/image/970x450/nikola-tesla_49170.jpg" style="width:100%">
 
         <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/lampu.png" style="width:100%">
 
