--- a/biography.html
+++ b/biography.html
@@ -103,7 +103,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
         <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/listrik.png" style="width:100%">
 
-        <img src="/w3images/chef.jpg" style="width:100%">
+        <img src="http://www.croatianhistory.net/gif/science/tesla/tesla_zivich640.jpg" style="width:100%">
 
         <img src="/w3images/wedding.jpg" style="width:100%">
 
