--- a/award.html
+++ b/award.html
@@ -110,9 +110,12 @@ Polyphase system of generating, transmitting, distributing and utilizing electri
   
   <h2><b>Certificate of Dr. Honoris Causa awarded to Tesla from the University of Paris</b></h2>
 <p>on 6th November 1937 the unuversity of paris awarded Nikola Tesla the Dr.Honoris Causa of technical science</p>
+  <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0015.jpg?itok=w_VDjItc" width="500">
+
 <h2><b>Awarded to Tesla, the White Lion is the highest order of the Czech Republic</b></h2>
 </p>
 <p>on July 11th 1937 Mr Hurban presenting the grand cordon of the white lion said "our czechoslovak nations brotherly feeling towards you as a son of yugoslavia made it a duty,not a privilege to give you the decoration in the name of the president of our nation.Dr Eduard Benes "he also presented a diploma certifying Dr Tesla's honorary degree as a doctor of the university of prague.</p>
+
   <h2><b>Certificate of honorary doctorate awarded to Tesla from the University of Belgrade</b></h2>
   <p>on june 15 th 1926 Tesla received a diploma of honorary doctorate from the faculty of engineering university of balgrade.</p>
 
