--- a/book8.html
+++ b/book8.html
@@ -43,7 +43,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>INVENTIONS</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/contact.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/contact.html" class="w3-bar-item w3-button style="width:500px;height:600px;">w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
     <p>CONTACT</p>
   
@@ -69,7 +69,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>By George Trinkaus</h2>
     
 <p>
-   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/tesla-coil-01.jpg" alt="Nikola Tesla Book 8" style="width:30%">
+   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/tesla-coil-01.jpg" alt="Nikola Tesla Book 8" style="width:500px;height:600px;">
 </p>
 <p>Invented by Nikola Tesla back in 1891, the Tesla coil can boost power from a wall socket or battery to millions of high frequency volts. In this booklet, the only systematic treatment of the Tesla coil for the electrical nonexpert, you'll find a wealth of information on one of the best-kept secrets of electric technology, plus all the facts you need to build a Tesla coil on any scale. And you can build one out of everyday stuff.
 
