--- a/book7.html
+++ b/book7.html
@@ -69,7 +69,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>By Norma Brody</h2>
     
 <p>
-   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/legacy-the-life-of-nikola-tesla-01.jpg" alt="Nikola Tesla Book 7" style="width:50%">
+   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/legacy-the-life-of-nikola-tesla-01.jpg" alt="Nikola Tesla Book 7" style="width:150px;height:250px;">
 </p>
 <p>Every now and then we come across that extra special person who has changed the course of events worldwide. Many times they somehow have been shuffled around in the annals of history and have never been given the accolades they deserve. That extra special person is Nikola Tesla.
 
