--- a/biography.html
+++ b/biography.html
@@ -114,7 +114,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
   
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <p><button class="w3-button w3-black w3-round-large"><a href="https://https://sherlitaf.github.io/">Sherlita Fadilah</a></button></p>
+    <p><button class="w3-button w3-black w3-round-large"><a href="https://sherlitaf.github.io/">Sherlita Fadilah</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://aufadilrahma.github.io/">Aufadil Rahmadi Putra</a></button></p>
 
  
