--- a/book6.html
+++ b/book6.html
@@ -69,7 +69,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>By Ferrel D. Moore</h2>
     
 <p>
-   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/the-tesla-factor-01.jpg" alt="Nikola Tesla Book 6" style="width:50%">
+   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/the-tesla-factor-01.jpg" alt="Nikola Tesla Book 6" style="width:200px;height:300px;">
 </p>
 <p>Hiding a Russian beauty from the Russian mob was not the smartest thing that John Haggerty ever did. Now he and his friends are being hunted by the Russian Mafia, Chinese gangsters, and a corrupt Southern family intent on stealing the secret that the woman is hiding from everyone - including himself. Love, lust, larceny and the long lost journals of Nikola Tesla discovered in a desolate Michigan ghost town. John Haggerty soon realizes that some people will go to any lengths to acquire power - even murder.
 
