--- a/book1.html
+++ b/book1.html
@@ -80,7 +80,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
       <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
-    
+<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book2.html" class="next round">&#8250;</a>    
     
   <!-- End footer -->
   </footer>
