--- a/book2.html
+++ b/book2.html
@@ -69,7 +69,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>By Dr. Elizabeth Rusch</h2>
     
 <p>
-   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/electrical-wizard-how-nikola-tesla-lit-up-the-world-01.jpg" alt="Nikola Tesla Book 2" style="width:50%">
+   <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/electrical-wizard-how-nikola-tesla-lit-up-the-world-01.jpg" alt="Nikola Tesla Book 2" style="width:200px;height:300px;">
 </p>
 <p>
 When a Serbian boy named Nikola Tesla was three, he stroked his cat and was enchanted by the electrical sparks. By the time he was a teenager, he had made a vow: Someday I will turn the power of Niagara Falls into electricity. Here is the story of the ambitious young man who brought life-changing ideas to America, despite the obstructive efforts of his hero-turned-rival, Thomas Edison. From using alternating current to light up the Chicago World’s Fair to harnessing Niagara to electrify New York City and beyond, Nikola Tesla was a revolutionary ahead of his time. Remote controls, fluorescent lights, X-rays, speedometers, cell phones, even the radio — all resulted from Nikola Tesla’s inventions. Established biographer Elizabeth Rusch sheds light on this extraordinary figure, while fine artist Oliver Dominguez brings his life and inventions to vivid color. Back matter includes additional information about Tesla, scientific notes and explanations, source notes, a bibliography, and suggestions for further reading.
