--- a/invention.html
+++ b/invention.html
@@ -102,6 +102,15 @@ Pemberian hak paten terhadap siapa yang menemukan radio memang pernah menjadi ko
 <p class="sansserif">Sewaktu Perang Dunia I pecah, Tesla membayangkan penerapan energi nirkabel dapat meningkatkan sistem kerja transportasi. Dia mengklaim kalau sebuah pesawat tak bersayap dan tanpa awak, atau Airship, dapat mengangkut penumpang dari New York ke London dalam waktu tiga jam dengan menggunakan energi listrik melalui transfer energi nirkabel.
 Tujuan pesawat tanpa sayap tersebut telah ditentukan sebelumnya. Lebih jauh lagi, Tesla bahkan mengatakan kalau Airship juga bisa digunakan dalam perang, terutama melalui serangan udara. Tentu saja banyak orang yang menganggap klaim Testa merupakan ide gila. Akan tetapi Tesla terus berusaha meyakinkan Departemen Pertahanan AS tentang alat yang mampu terbang tanpa sayap untuk mengirimkan bahan peledak ke musuh. Ide Tesla tersebut kini kita lihat dalam bentuk rudal.
 
+<br>
+<br>
+<br>
+<br>
+<p style="font-size:80%;text-align: left;">Source : https://www.boombastis.com/penemuan-nikola-tesla/89341</p>
+
+
+
+
 
 
   <div></div>
