--- a/book2.html
+++ b/book2.html
@@ -80,6 +80,8 @@ When a Serbian boy named Nikola Tesla was three, he stroked his cat and was ench
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
+      <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book1.html" class="previous round">&#8249;</a>
+	<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book3.html" class="next round">&#8250;</a>
     
     
   <!-- End footer -->
