--- a/book3.html
+++ b/book3.html
@@ -79,7 +79,8 @@ Exposed: Reverse Gravity - Free Energy - Contact With Hidden Dimensions - Myster
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
-    
+   <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book2.html" class="previous round">&#8249;</a>
+<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book4.html" class="next round">&#8250;</a> 
     
   <!-- End footer -->
   </footer>
