--- a/book4.html
+++ b/book4.html
@@ -80,7 +80,8 @@ The trend of modern electrical work is in the direction of high potentials. It h
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
-    
+    <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book3.html" class="previous round">&#8249;</a>
+<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book5.html" class="next round">&#8250;</a>
     
   <!-- End footer -->
   </footer>
