--- a/book5.html
+++ b/book5.html
@@ -80,6 +80,8 @@ In presenting this book on the Tesla coil to the public, the authors hope that t
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
+      <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book4.html" class="previous round">&#8249;</a>
+<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book6.html" class="next round">&#8250;</a>
     
     
   <!-- End footer -->
