--- a/book6.html
+++ b/book6.html
@@ -106,7 +106,9 @@ The Tesla Factor blends international intrigue, suspense, and danger that will k
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
- 
+
+      <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book5.html" class="previous round">&#8249;</a>
+<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book7.html" class="next round">&#8250;</a>
     
     
   <!-- End footer -->
