--- a/book7.html
+++ b/book7.html
@@ -119,7 +119,8 @@ table, td {
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
-    
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book6.html" class="previous round">&#8249;</a>
+<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book8.html" class="next round">&#8250;</a>  
     
   <!-- End footer -->
   </footer>
