--- a/book8.html
+++ b/book8.html
@@ -112,7 +112,7 @@ table, th, td {
     <p><button class="w3-button w3-black w3-round-large"><a href="https://deskayyy.github.io/">Deska Yuliyanti</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://adamrafif.github.io/">Adam Rafif Faqih</a></button></p>
  
-    
+   <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/book7.html" class="previous round">&#8249;</a>
     
   <!-- End footer -->
   </footer>
