--- a/biography.html
+++ b/biography.html
@@ -105,9 +105,9 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
         <img src="http://www.croatianhistory.net/gif/science/tesla/tesla_zivich640.jpg" style="width:100%">
 
-        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/bohlamgantung.png?raw=true" style="width:100%">
 
-        <img src="/w3images/p6.jpg" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/tangankesetrum.png?raw=true" style="width:100%">
 
       </div>
   
@@ -116,7 +116,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://sherlitaf.github.io/">Sherlita Fadilah</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://aufadilrahma.github.io/">Aufadil Rahmadi Putra</a></button></p>
-    <p style=:font-size:50%;text-align:left;">Source : https://en.wikipedia.org/wiki/Nikola_Tesla <p>
+    <p style=:font-size:30%;text-align:left;">Source : https://en.wikipedia.org/wiki/Nikola_Tesla <p>
  
     
     
