--- a/biography.html
+++ b/biography.html
@@ -105,7 +105,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
         <img src="http://www.croatianhistory.net/gif/science/tesla/tesla_zivich640.jpg" style="width:100%">
 
-        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/bohlamgantung.png?raw=true" style="width:100%">
+        <img src="https:"" style="width:100%">
 
         <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/tangankesetrum.png?raw=true" style="width:100%">
 
