--- a/award.html
+++ b/award.html
@@ -75,7 +75,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/nikola_tesla_portrait_0028.jpg?itok=WTW37Lua" alt="Nikola Tesla Awards 1" style="width:100%">
       <h3>Nikola Tesla receiving the Order of the White Lion from Czechoslovakia</h3>
-      <p>Nikola Tesla, at left, receiving the Order of the White Lion from Vladimir Hurban, Minister from Czechoslovakia, at a luncheon held July, 11, 1937 in Tesla's room at the New Yorker Hotel.</p>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award1.html">Know More...</a></button></p>
     </div>
     <div class="w3-quarter">
       <img src="https://tse3.mm.bing.net/th?id=OIP.vnWzVAANF8jR_NExspjX-AHaHa&pid=Api&P=0&w=300&h=300" alt="Nikola Tesla Awards 2" style="width:100%">
