--- a/award.html
+++ b/award.html
@@ -80,7 +80,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-quarter">
       <img src="https://tse3.mm.bing.net/th?id=OIP.vnWzVAANF8jR_NExspjX-AHaHa&pid=Api&P=0&w=300&h=300" alt="Nikola Tesla Awards 2" style="width:100%">
       <h3>Elliot Cresson Medal</h3>
-      <p>The Elliott Cresson Medal, also known as the Elliott Cresson Gold Medal, was the highest award given by the Franklin Institute and tesla won this award on 1894 on Engineering category Alternating Electric Currents of High Frequency citation</p>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award2.html">Know More...</a></button></p>
     </div>
     <div class="w3-quarter">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/JohnWHowellEdisonMedal1924.jpg/250px-JohnWHowellEdisonMedal1924.jpg" alt="Nikola Tesla Awards 3" style="width:100%">
