--- a/award.html
+++ b/award.html
@@ -85,7 +85,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-quarter">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/JohnWHowellEdisonMedal1924.jpg/250px-JohnWHowellEdisonMedal1924.jpg" alt="Nikola Tesla Awards 3" style="width:100%">
       <h3>John Scott Medal</h3>
-      <p>John Scott Award, created in 1816 as the John Scott Legacy Medal and Premium, is presented to men and women whose inventions improved the "comfort, welfare, and happiness of human kind" in a significant way and tesla won this medal on 1934 for Polyphase system of generating, transmitting, distributing and utilizing electricity </p>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award3.html">Know More...</a></button></p>
     </div>
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0009.jpg?itok=Y5UEn6wD"  alt="Nikola Tesla Awards" style="width:100%">
