--- a/award.html
+++ b/award.html
@@ -89,8 +89,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0009.jpg?itok=Y5UEn6wD"  alt="Nikola Tesla Awards" style="width:100%">
-      <h3>IEEE Edison Medal </h3>
-      <p>The IEEE Edison Medal is presented by the Institute of Electrical and Electronics Engineers (IEEE) "for a career of meritorious achievement in electrical science and tesla won this medal on 1916 </p>
+      <h3>IEEE Nikola Tesla Award </h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award4.html">Know More...</a></button></p>
     </div>
   </div>
   
